tests/baselines/reference/parserGenericsInVariableDeclaration1.errors.txt
==== tests/cases/compiler/parserGenericsInVariableDeclaration1.ts (11 errors) ====
    var v : Foo<T> = 1;
            ~~~
!!! parserGenericsInVariableDeclaration1.ts(1,9): error TS2095: Cannot find name 'Foo'.
    var v : Foo<T>= 1;
        ~~~~~~~~~~~~~
!!! parserGenericsInVariableDeclaration1.ts(2,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type 'any', but here has type 'any'.
            ~~~
!!! parserGenericsInVariableDeclaration1.ts(2,9): error TS2095: Cannot find name 'Foo'.
    
    var v : Foo<Bar<T>> = 1;
        ~~~~~~~~~~~~~~~~~~~
!!! parserGenericsInVariableDeclaration1.ts(4,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type 'any', but here has type 'any'.
            ~~~
!!! parserGenericsInVariableDeclaration1.ts(4,9): error TS2095: Cannot find name 'Foo'.
    var v : Foo<Bar<T>>= 1;
        ~~~~~~~~~~~~~~~~~~
!!! parserGenericsInVariableDeclaration1.ts(5,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type 'any', but here has type 'any'.
            ~~~
!!! parserGenericsInVariableDeclaration1.ts(5,9): error TS2095: Cannot find name 'Foo'.
    
    var v : Foo<Bar<Quux<T>>> = 1;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! parserGenericsInVariableDeclaration1.ts(7,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type 'any', but here has type 'any'.
            ~~~
!!! parserGenericsInVariableDeclaration1.ts(7,9): error TS2095: Cannot find name 'Foo'.
    var v : Foo<Bar<Quux<T>>>= 1;
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! parserGenericsInVariableDeclaration1.ts(8,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type 'any', but here has type 'any'.
            ~~~
!!! parserGenericsInVariableDeclaration1.ts(8,9): error TS2095: Cannot find name 'Foo'.